Fixed typo in index.html Sorry, it was driving me nuts

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ description: Bitwarden is a free and open source password management solution fo
                         </div>
                         <div class="modal-body">
                             <p>
-                                Bitwarden offer's a variety of different installation options for the
+                                Bitwarden offers a variety of different installation options for the
                                 desktop application. You can find them all listed below.
                             </p>
                             <p>
